# The-Golden

./: CODEOWNERS  README.md  maumivu.au
examples/: fibonacci.au  fibonacci_zero.au  hello_world.au
interpreter/: main.py
python-interpreter-old/: README.md  main.py
the-golden/: Cargo.toml  maumivu.au
the-golden/src/: flags.rs  main.rs  utils.rs
the-golden/src/configuration/: commands.json  handler.rs
the-golden/src/interpreter/: interpreter.rs  preprocessor.rs
the-golden/src/interpreter/versions/: handler.rs
the-golden/src/interpreter/versions/v0-1-0/: brackets_matcher.rs  lexer.rs  main.rs  validator.rs
the-golden/src/interpreter/versions/v0-2-0/: lexer.rs  main.rs  parser.rs  validator.rs
the-golden/src/interpreter/versions/v0-3-0/: main.rs  validator.rs
the-golden/src/interpreter/versions/v0-4-0/: lexer.rs  main.rs  parser.rs  validator.rs
the-golden/src/interpreter/versions/v0-5-0/: main.rs
